--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --light-gray: 248, 250, 252;
   --gray: 219, 232, 239;
   --dark-gray: 176, 185, 165;
+  --off-black: 18, 20, 0;
 }
 
 html {
@@ -97,14 +98,29 @@ h2 {
 }
 
 form {
+  color: rgb(--off-black);
   background-color: white;
   padding: 15px 35px 30px;
   box-shadow: 0px 5px 20px rgba(var(--prim-dark), 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 form h2 {
   padding: 0;
   margin: 0 0 5px;
+}
+
+form > div {
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+
+label {
+  flex: 1;
+  font-size: 0.8rem;
 }
 
 .main > div:last-child {
@@ -114,15 +130,33 @@ form h2 {
   margin: 30px 0 0 35px;
 }
 
-button {
+button,
+input {
   appearance: none;
+  font-family: inherit;
+  font-size: 100%;
+}
+
+input {
+  border: 1px solid rgb(var(--gray));
+  border-radius: 3px;
+}
+
+input:focus {
+  background-color: rgba(var(--primary), 0.05);
+  border-color: rgb(var(--comp-dark), 0.5);
+  outline: 0;
+}
+
+button {
   background-color: rgba(var(--comp-dark), 0.9);
   color: rgb(var(--light-gray));
-  padding: 4px 12px;
+  padding: 10px 25px;
   border: none;
   border-radius: 5px;
   box-shadow: 2px 3px 5px rgba(var(--prim-dark), 0.4);
-  font-size: 1.3rem;
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 button:hover {
