--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ body {
 }
 
 .image {
+  flex: 1;
   width: 40%;
   max-width: 683px;
-  min-width: 350px;
+  min-width: 300px;
   display: flex;
   flex-direction: column;
   background-image: url("rose.jpg");
@@ -48,6 +49,7 @@ h1 {
 h1 > img {
   position: relative;
   top: 3px;
+  left: -3px;
   height: 3.5rem;
   margin-right: 1rem;
   opacity: 0.9;
@@ -73,7 +75,7 @@ h4 {
 }
 
 .main {
-  flex: auto;
+  flex: 2;
   display: flex;
   flex-direction: column;
   background-color: rgba(var(--primary), 0.15);
